--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "multiparty": "^4.2.3",
     "next": "13.1.6",
+    "node": "^19.6.0",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slideshow-image": "^4.2.1",
