--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "dynamicportfolio",
   "version": "0.1.0",
-  "engines": {
-    "node": "12.22.7"
-  },
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -21,7 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slideshow-image": "^4.2.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
