--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "next": "13.1.6",
     "node": "^16.13.2",
     "react": "18.2.0",
