--- a/package.json
+++ b/package.json
@@ -5,26 +5,45 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "serverstart": "node server.js",
+    "seed": "node seeds/index.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.6",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "connect-session-sequelize": "^7.1.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "iron-session": "^6.3.1",
+    "mysql2": "^3.2.4",
     "next": "13.1.6",
+    "next-iron-session": "^4.2.0",
+    "next-session": "^4.0.5",
     "node": "^16.13.2",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slideshow-image": "^4.2.1",
     "reveal-on-scroll-react": "^0.0.6",
+    "sequelize": "^6.31.0",
+    "swiper": "^9.2.4",
     "typescript": "4.9.5",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express-session": "^1.17.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
