--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "react-slideshow-image": "^4.2.1",
+    "react-type-animation": "^3.0.1",
     "reveal-on-scroll-react": "^0.0.6",
     "sequelize": "^6.31.0",
     "swiper": "^9.2.4",
